@@ -1,3 +1,7 @@
+2009-05-07
+	* improve MemoWiget() to warning when close without saving.
+	* fix bug of EditFileFun.
+	
 2009-05-06
 	* add arguments to UpdateTableWidget() to sort the items according to name or time -> by default, f-cat and c-cat are sorted by name.
 	* Can edit a selected file (popup menu of Files/Case/F-cat Tab).
